# IntelliVoice

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/api/routes/: audio_ws.py  chat.py  health.py
backend/core/: __init__.py  gpu_manager.py  pipeline.py  session_manager.py
backend/layers/: __init__.py
backend/layers/acoustic_encoder/: __init__.py  xlsr_encoder.py
backend/layers/asr/: __init__.py  whisper_asr.py
backend/layers/memory/: __init__.py  conversation_memory.py  long_term_memory.py  schemas.py
backend/layers/preprocessing/: __init__.py  audio_utils.py  noise_suppression.py  vad.py
backend/layers/prosody/: __init__.py  emotion2vec.py
backend/layers/reasoning/: __init__.py  fast_reasoning.py  qwen3_reasoning.py
backend/layers/response_planning/: __init__.py  planner.py
backend/layers/semantic/: __init__.py  qwen_audio.py
backend/layers/speaker/: __init__.py  ecapa.py  emotion.py  sensevoice.py  wavlm_speaker.py
backend/layers/speech_generation/: __init__.py  cosyvoice.py  omnivoice_tts.py  piper_tts.py
backend/services/: audio_stream.py  model_loader.py
config/: __init__.py  logging_config.py  model_registry.py  settings.py
docker/: Dockerfile.backend
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
pretrained_models/spkrec-ecapa-voxceleb/: hyperparams.yaml
scripts/: benchmark.py  download_models.py  test_pipeline.py
tests/: __init__.py  test_pipeline_e2e.py  test_preprocessing.py  test_reasoning.py
(+15 files in other folders)
